--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@ header {
   text-align: center;
 }
 
-@media screen and (max-width: 600px) {
-  .logo {
-    width: 90px;
-    max-width: 90%;
-  }
+.logo {
+  width: 150px;
+  max-width: 100%;
+}
+
 .menu {
   margin-top: 10px;
 }
@@ -106,4 +106,23 @@ footer a {
 
 footer a:hover {
   text-decoration: underline;
+}
+
+/* 🔧 MEDIA QUERIES (corrigées) */
+@media screen and (max-width: 600px) {
+  .logo {
+    width: 90px;
+    max-width: 90%;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+  }
+
+  .card {
+    width: 90%;
+  }
 }
